--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,9 @@
 }
 
 /* shared style */
+.secondary-bg {
+  background-color: #fff8f3;
+}
 .text-primary{
   color: #FD6E0A;
 }
@@ -27,6 +30,16 @@
   padding: 18px 35px;
   border-radius: 5px;
 
+}
+
+.section-title{
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+}
+.section-description {
+  font-size: 18px;
+  color: #757575;
 }
 /* header */
 .header{
@@ -85,4 +98,25 @@ nav li a{
 }
 .banner-profile{
   width: 580px;
+}
+/* main styles */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* about styles */
+
+.About {
+  border-radius: 10px;
+  text-align: center;
+  padding: 131px 150px;
+  margin-top: 130px;
+  
+}
+.about-itmes{
+  display: flex;
+  justify-content: space-around;
+}
+.section-description{
+  font-weight: 700;
 }
