--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,9 @@
 .secondary-bg {
   background-color: #fff8f3;
 }
+.text-center {
+  text-align: center;
+}
 .text-primary{
   color: #FD6E0A;
 }
@@ -104,13 +107,17 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+main section{
+  
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
 /* about styles */
 
 .About {
   border-radius: 10px;
   text-align: center;
   padding: 131px 150px;
-  margin-top: 130px;
   
 }
 .about-itmes{
@@ -119,4 +126,16 @@ main{
 }
 .section-description{
   font-weight: 700;
+}
+/* skills section style */
+.skilles-contaiter{
+  display: flex;
+  row-gap: 25px;
+  
+  
+}
+.skill{
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0px rgb(239, 214, 113);
+  border-radius: 5px;
 }
