--- a/styles/style.css
+++ b/styles/style.css
@@ -139,3 +139,14 @@ main section{
   box-shadow: 0px 6px 50px 0px rgb(239, 214, 113);
   border-radius: 5px;
 }
+/* resume section styles */
+.resume-container{
+  display: flex;
+  gap: 24px;
+}
+.experience-description .experience-sub-title{
+  color: #757575;
+}
+.resume-download-cv{
+  margin-top: 50px;
+}
